--- a/package.json
+++ b/package.json
@@ -8,12 +8,22 @@
   "repository": "git@github.com:landn172/miniapp-canvas.git",
   "author": "蒋瑶 <landn172@gmail.com>",
   "scripts": {
-    "build": "node scripts/build.js"
+    "build": "node scripts/build.js",
+    "build:doc": "jsdoc2md --files src/**/*.ts --configure jsdoc2md.json --template template/README.hbs > README.md"
   },
   "license": "MIT",
   "devDependencies": {
+    "@babel/cli": "7.0.0-beta.40",
+    "@babel/core": "7.0.0-beta.40",
+    "@babel/plugin-proposal-class-properties": "7.0.0-beta.40",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.40",
+    "@babel/preset-env": "7.0.0-beta.40",
+    "@babel/preset-typescript": "7.0.0-beta.40",
     "@tuhu/dt-weapp": "^1.1.5",
+    "doctoc": "^1.3.1",
     "fs-extra": "^7.0.0",
+    "jsdoc-babel": "0.4.0-alpha.0",
+    "jsdoc-to-markdown": "^4.0.1",
     "rollup": "^0.62.0",
     "rollup-plugin-filesize": "^2.0.0",
     "rollup-plugin-node-resolve": "^3.3.0",
