feat: 完善绘制能力

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,6 +1,8 @@
 {
   "pages":[
-    "pages/index/index"
+    "pages/index/index",
+    "pages/text/text",
+    "pages/rect/rect"
   ],
   "window":{
     "backgroundTextStyle":"light",
