--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "miniapp-canvas",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "lib/miniapp-canvas.js",
   "module": "lib/miniapp-canvas.module.js",
   "esnext": "lib/miniapp-canvas.es6.js",
@@ -9,7 +9,8 @@
   "author": "蒋瑶 <landn172@gmail.com>",
   "scripts": {
     "build": "node scripts/build.js",
-    "build:doc": "jsdoc2md --files src/**/*.ts --configure jsdoc2md.json --template template/README.hbs > README.md"
+    "build:doc": "jsdoc2md --files src/**/*.ts --configure jsdoc2md.json --template template/README.hbs > README.md",
+    "prepublish": "npm run build && npm run build:doc"
   },
   "license": "MIT",
   "devDependencies": {
