--- a/project.config.json
+++ b/project.config.json
@@ -20,13 +20,30 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 1,
+			"list": [
+				{
+					"id": -1,
+					"name": "text",
+					"pathName": "pages/text/text",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "rect",
+					"pathName": "pages/rect/rect",
+					"query": ""
+				}
+			]
 		}
 	}
 }
