--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
   "typings": "lib/index.d.ts",
   "repository": "git@github.com:landn172/miniapp-canvas.git",
   "author": "蒋瑶 <landn172@gmail.com>",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "build": "node scripts/build.js",
     "build:doc": "jsdoc2md --files src/**/*.ts --configure jsdoc2md.json --template template/README.hbs > README.md",
@@ -20,7 +27,7 @@
     "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.40",
     "@babel/preset-env": "7.0.0-beta.40",
     "@babel/preset-typescript": "7.0.0-beta.40",
-    "@tuhu/dt-weapp": "^1.1.5",
+    "@tuhu/dt-weapp": "^1.1.6",
     "doctoc": "^1.3.1",
     "fs-extra": "^7.0.0",
     "jsdoc-babel": "0.4.0-alpha.0",
