--- a/project.config.json
+++ b/project.config.json
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 2,
 			"list": [
 				{
 					"id": -1,
@@ -41,6 +41,12 @@
 					"id": -1,
 					"name": "rect",
 					"pathName": "pages/rect/rect",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "qrcode",
+					"pathName": "pages/qrcode/qrcode",
 					"query": ""
 				}
 			]
