--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   ],
   "scripts": {
     "build": "node scripts/build.js",
-    "build:doc": "jsdoc2md --files src/**/*.ts --configure jsdoc2md.json --template template/README.hbs > README.md",
-    "prepublish": "npm run build && npm run build:doc"
+    "test": "jest --env=node --colors test",
+    "prepublish": "npm run build && npm run test"
   },
   "license": "MIT",
   "devDependencies": {
@@ -27,14 +27,17 @@
     "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.40",
     "@babel/preset-env": "7.0.0-beta.40",
     "@babel/preset-typescript": "7.0.0-beta.40",
-    "@tuhu/dt-weapp": "^1.1.6",
+    "@tuhu/miniprogram-api-typings": "^2.4.2-2.1",
+    "@types/jest": "^24.0.12",
     "doctoc": "^1.3.1",
     "fs-extra": "^7.0.0",
+    "jest": "^24.8.0",
     "jsdoc-babel": "0.4.0-alpha.0",
     "jsdoc-to-markdown": "^4.0.1",
     "rollup": "^0.62.0",
     "rollup-plugin-filesize": "^2.0.0",
     "rollup-plugin-node-resolve": "^3.3.0",
+    "ts-jest": "^24.0.2",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.13.0",
     "typescript": "^2.9.2"
