--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "build": "node scripts/build.js",
     "test": "jest --env=node --colors test",
+    "docs:build": "vuepress build docs",
     "prepublish": "npm run build && npm run test"
   },
   "license": "MIT",
@@ -40,6 +41,7 @@
     "ts-jest": "^24.0.2",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.13.0",
-    "typescript": "^2.9.2"
+    "typescript": "^2.9.2",
+    "vuepress": "^0.14.11"
   }
 }
