--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "main": "lib/miniapp-canvas.js",
   "browser": "lib/miniapp-canvas.web.js",
   "typings": "lib/index.d.ts",
-  "repository": "git@github.com:landn172/miniapp-canvas.git",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:landn172/miniapp-canvas.git"
+  },
   "author": "蒋瑶 <landn172@gmail.com>",
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
-  "files": [
-    "lib"
-  ],
+  "files": ["lib"],
   "scripts": {
     "build": "node scripts/build.js --build",
     "watch": "node scripts/build.js --watch",
